# dns-synchub

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/flagd/: flagd.json
.devcontainer/grafana/: grafana.ini
.devcontainer/grafana/provisioning/dashboards/: main.yaml
.devcontainer/grafana/provisioning/dashboards/main/: main-dashboard.json  opentelemetry-collector-data-flow.json  opentelemetry-collector.json  spanmetrics-dashboard.json  traefik.json
.devcontainer/grafana/provisioning/datasources/: default.yaml  jaeger.yaml
.devcontainer/otelcol/: opentelemetry.yml
.devcontainer/prometheus/: prometheus.yml
.github/: mergify.yml
.github/workflows/: actions.yml  code.yml  containers.yml  publish.yml  versioning.yml
docs/: architecture.md  operations.md  runtime-contract.md
scripts/: check_coverage.py  sync
src/dns_synchub/: __about__.py  __init__.py  __main__.py  cli.py  logger.py  meter.py  practice.py  telemetry_constants.py  tracer.py
src/dns_synchub/events/: __init__.py  types.py
src/dns_synchub/mappers/: __init__.py
src/dns_synchub/pollers/: __init__.py  types.py
src/dns_synchub/settings/: __init__.py  types.py
src/dns_synchub/utils/: _classproperty.py  _helpers.py  _once.py
tests/dns-synchub/: conftest.py  test_cli.py  test_cloudflare.py  test_docker.py  test_entrypoints.py  test_events.py  test_logger.py  test_main.py  test_meter_tracer.py  test_settings.py  test_traefik.py
tests/telemetry/: test_telemetry.py
