[project]
name = "dns-synchub"
description = """
This will build a Docker image to automatically update CloudFlare DNS
records upon container start when using Traefik as a Reverse Proxy
"""
authors = [
    { name = "Carlos Martín", email = "inean.es@gmail.com" },
]
license = "MIT"
readme = "README.md"
version = "0.1.0"
dependencies = [
    "cloudflare <= 3.1.1",
    "docker>=7.1.0",
    "pydantic >= 2.0",
    "pydantic-settings @ git+https://github.com/inean/pydantic-settings@2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.26.0",
    "tenacity>=9.0.0",
    "typing-extensions>= 4.5.0",
]
requires-python = ">= 3.11"

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/inean/dns-synchub"
Source = "https://github.com/inean/dns-synchub"
Changelog = "https://github.com/inean/dns-synchub/blob/main/CHANGELOG.md"

[project.scripts]
dns-synchub = "dns_synchub:main"

[tool.uv]
dev-dependencies = [
    # lint
    "mypy>=1.11.2",
    "pre-commit>=3.7.1",
    "pyupgrade>=3.16.0",
    "ruff>=0.5.4",
    "deptry>=0.20.0",
    # test
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-mock >=3.14.0",
    "pytest>=8.3.2",
    "pytest-pretty",
    # Type stubs
    "types-docker>=7.1.0.20240827",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "skip_fixture(name): Skip the test if the specified mark is present",
]
testpaths = "tests"
pythonpath = [
    "src",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = [
    'dns_synchub',
]
context = '${CONTEXT}'

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'raise NotImplemented',
    'if TYPE_CHECKING:',
    '@overload',
]

[tool.coverage.paths]
source = [
    'src/dns_synchub/',
]

[tool.ruff]
# set max-line-length to 100
line-length = 100
# Enable preview features.
preview = true

[tool.ruff.format]
# format code inside docstrings
docstring-code-format = true
# Prefer single quotes over double quotes.
quote-style = 'single'
# Enable preview style formatting.
preview = true

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`),
extend-select = [
    # code complexity rules
    'C90',
    # isort rules
    'I',
    #
    'RUF100',
]
extend-fixable = [
    # line too-long rule
    'E501',
    # isort rules
    'I',
    # flake8-bugbear rules
    'B',
    # flake8-quotes rules
    'Q',
    'RUF100',
    # pydocstyle rules
    'D',
    # pyupgrade rules
    'UP',
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    'src',
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.deptry]
root = 'src/dns_synchub'

[tool.mypy]
strict = true
files = [
    "src/",
    "tests/",
]
# Third party type stubs
mypy_path = "types"
#Don't prevents discovery of packages that don’t have an __init__.py
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    'dotenv.*',
]
#Silently ignore imports of missing modules
ignore_missing_imports = true
